--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<p><strong>what is the capital of India?</strong></p>
+	<blockquote cite="">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+		
+	</blockquote>
 </body>
 
 </html>
